--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <h2>Sample Sub-Heading</h2>
       <p class="headlineMinor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
       Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+      <h2>Sample Sub-Heading</h2>
+      <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+      Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+      <h2>Sample Sub-Heading</h2>
+      <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+      Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
     </body>
 
 </html>
