update head elements

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Inti Bryon</title>
-        <meta name="description" content="Welcome to Inti Bryon's personal web page. Inti is a loving father, husband, son, brother, friend; as well as a determined, passionate, innovative, performance driven information technology leader."/>
-        <meta name="keywords" content="inti, inti bryon, technology leader, project manager, project management, program manager, product manager, product management, technology strategy, technology strategist, strategist, lead developer, team lead, microsoft, dot net, .net, office 365, microsoft office, microsoft azure, azure, azure cloud, cloud services, cloud development, application modernization, amazon aws, aws, google gcp, tech lead, tech strategy, tech strategist, technology lead" />
+        <title>Inti's Dev / Play Site</title>
+        <meta name="description" content="Welcome to Inti Bryon's dev and play web page"/>
+        <meta name="keywords" content="inti, inti bryon, dot net, .net, microsoft azure, azure, azure cloud, Azure static webpage, cloud services, cloud development, application modernization" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
