multi css class

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
       Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
       <h2>Sample Sub-Heading</h2>
-      <p class="headlineMinor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+      <p class="headlineMinor headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
       Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
       <h2>Sample Sub-Heading</h2>
       <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
       Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
       <h2>Sample Sub-Heading</h2>
-      <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+      <p class="headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
       Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
     </body>
 
