--- a/index.html
+++ b/index.html
@@ -9,19 +9,32 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-      <h1>Welcome to this page</h1>
-      <h2>Sample Sub-Heading</h2>
-      <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-      Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
-      <h2>Sample Sub-Heading</h2>
-      <p class="headlineMinor headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-      Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
-      <h2>Sample Sub-Heading</h2>
-      <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-      Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
-      <h2>Sample Sub-Heading</h2>
-      <p class="headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-      Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+      <header class="siteHeader">
+        <h1>Welcome to this page</h1>
+        <hr>
+      </header>
+      <section class="siteSection1">
+        <h2>Sample Sub-Heading</h2>
+        <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+      </section>
+      <section class="siteSection2">
+        <h2>Sample Sub-Heading</h2>
+        <p class="headlineMinor headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+        <h2>Sample Sub-Heading</h2>
+        <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+      </section>
+      <section class="siteSection3">
+        <h2>Sample Sub-Heading</h2>
+        <p class="headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+      </section>
+      <footer class="siteFooter">
+        <p>thank you for visiting</p>
+      </footer>
+
     </body>
 
 </html>
