--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>Inti's Dev / Play Site</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
         <meta name="description" content="Welcome to Inti Bryon's dev and play web page"/>
-        <meta name="keywords" content="inti, inti bryon, dot net, .net, microsoft azure, azure, azure cloud, Azure static webpage, cloud services, cloud development, application modernization" />
+        <meta name="keywords" content="inti, inti bryon, dot net, .net, html, css, javascript, microsoft azure, azure, azure cloud, Azure static webpage, cloud services, cloud development, application modernization" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
@@ -11,25 +14,43 @@
     <body>
       <header class="siteHeader">
         <h1>Welcome to this page</h1>
-        <hr>
       </header>
+      <hr>
       <section class="siteSection1">
-        <h2>Sample Sub-Heading</h2>
-        <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+        <div class="content-wrap">
+          <h2>Sample Sub-Heading</h2>
+          <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+          Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+        </div>
       </section>
       <section class="siteSection2">
-        <h2>Sample Sub-Heading</h2>
-        <p class="headlineMinor headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
-        <h2>Sample Sub-Heading</h2>
-        <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+        <div class="content-wrap">
+          <h2>Sample Sub-Heading</h2>
+          <p class="headlineMinor headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+          Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+          <h2>Sample Sub-Heading</h2>
+          <p>Some random text and more sample words for you to read. Some random text and more sample words for you to read.
+          Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+        </div>
       </section>
       <section class="siteSection3">
-        <h2>Sample Sub-Heading</h2>
-        <p class="headlineColor">Some random text and more sample words for you to read. Some random text and more sample words for you to read.
-        Some random text and more sample words for you to read. Some random text and more sample words for you to read. </p>
+        <div class="content-wrap">
+          <h2>Sample flex box</h2>
+          <div class="flex-container">
+            <div class="flex-item">
+              <p class="headlineMinor">Some random text</p>
+            </div>
+            <div class="flex-item">
+              <p class="headlineMinor">more sample words for you to read.</p>
+            </div>
+            <div class="flex-item">
+              <p>Some random text </p>
+            </div>
+            <div class="flex-item">
+              <p>Some random text and more sample words for you to read.</p>
+            </div>
+          </div>
+        </div>
       </section>
       <footer class="siteFooter">
         <p>thank you for visiting</p>
