--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <meta name="keywords" content="inti, inti bryon, dot net, .net, html, css, javascript, microsoft azure, azure, azure cloud, Azure static webpage, cloud services, cloud development, application modernization" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/styles.css">
+        <script src="js/scripts.js" defer></script>
     </head>
     <body>
       <header class="siteHeader">
@@ -57,6 +61,9 @@
       </section>
       <footer class="siteFooter">
         <p>thank you for visiting</p>
+        <a href="https://www.linkedin.com/in/intibryon/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a><br>
+        <a href="https://github.com/inti-bryon" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a><br>
+
       </footer>
 
     </body>
