testing teams integration

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
       <header class="siteHeader">
-        <h1>Welcome to this page</h1>
+        <h1>Welcome to my test page</h1>
       </header>
       <hr>
       <section class="siteSection1">
