--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="intibryon" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/intibryon?trk=profile-badge">Inti Bryon</a></div>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="intibryon" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/intibryon?trk=profile-badge"></a></div>
       </section>
       <footer class="siteFooter">
         <p>thank you for visiting</p>
