--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <footer class="siteFooter">
         <p>thank you for visiting</p>
         <!-- <a href="https://www.linkedin.com/in/intibryon/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a><br> -->
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="intibryon" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/intibryon?trk=profile-badge"></a></div>
+        <div style="text-align:center" class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="intibryon" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/intibryon?trk=profile-badge"></a></div>
       </footer>
 
     </body>
