--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <h1>Welcome to my test page</h1>
       </header>
       <hr>
+        <div>
+            <iframe title="HOLA Media Recommendations Word Cloud" width="1140" height="541.25" src="https://msit.powerbi.com/reportEmbed?reportId=b4d736e5-9c9c-4394-a777-4769f1f7021f&autoAuth=true&ctid=72f988bf-86f1-41af-91ab-2d7cd011db47" frameborder="0" allowFullScreen="true"></iframe>
+        </div>
       <section class="siteSection1">
         <div class="content-wrap">
           <h2>Sample Sub-Heading</h2>
