--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </head>
     <body>
       <header class="siteHeader">
-        <h1>Welcome to my test page</h1>
+        <h1>Miami-Dade County Unified Monthly Dashboard</h1>
       </header>
       <hr>
         <div>
-            <iframe title="Miami-Dade County Unified Monthly Dashboard" width="1140" height="541.25" src="https://msit.powerbi.com/reportEmbed?reportId=c607207e-fdef-422f-b959-c428c4a40ec6&autoAuth=true&ctid=72f988bf-86f1-41af-91ab-2d7cd011db47" frameborder="0" allowFullScreen="true"></iframe>
+            <iframe title="Miami-Dade County Unified Monthly Dashboard" width="95%" height="1000" src="https://msit.powerbi.com/reportEmbed?reportId=c607207e-fdef-422f-b959-c428c4a40ec6&autoAuth=true&ctid=72f988bf-86f1-41af-91ab-2d7cd011db47" frameborder="0" allowFullScreen="true"></iframe>
         </div>
         <!--
       <section class="siteSection1">
