--- a/report2.html
+++ b/report2.html
@@ -31,7 +31,7 @@
     <iframe
       width="100%"
       height="600"
-      src="YOUR_POWERBI_REPORT_URL"
+      src="https://msit.powerbi.com/reportEmbed?reportId=c607207e-fdef-422f-b959-c428c4a40ec6&autoAuth=true&ctid=72f988bf-86f1-41af-91ab-2d7cd011db47"
       frameborder="0"
       allowFullScreen="true">
     </iframe>
