--- a/report3.html
+++ b/report3.html
@@ -36,7 +36,7 @@
 
     /* Adding the Miami-Dade County logo as the background */
     .dashboard-container {
-      background-image: url('miami-dade-logo.png');
+      background-image: url('Miami-Dade-County-logo.jpg');
       background-repeat: no-repeat;
       background-position: right bottom;
       background-size: 200px; /* Adjust the size of the logo */
