Updated bg color report3.html
bg color

--- a/report3.html
+++ b/report3.html
@@ -17,7 +17,7 @@
       max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
-      background-color: #ffffff;
+      background-color: #0078d4;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
     }
@@ -56,7 +56,7 @@
   <div class="dashboard-container">
     <!-- Header with the Miami-Dade County logo -->
     <div class="dashboard-header">
-      <h1>My Power BI Dashboard</h1>
+      <h1>Miami-Dade County Unified Power BI Dashboard</h1>
     </div>
 
     <!-- Embed your Power BI report here using an iframe -->
