--- a/report5.html
+++ b/report5.html
@@ -3,13 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modern HTML Dashboard</title>
+  <title>Miami-Dade County / Microsoft Dashboard</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #f5f5f5;
+    }
+
+      .dashboard-title {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .dashboard-title h1 {
+      font-size: 24px;
+      font-weight: bold;
+      border-bottom: 2px solid #0078d4; /* Add a border line under the title */
+      padding-bottom: 10px;
     }
 
     .dashboard-container {
@@ -71,8 +83,10 @@
   </style>
 </head>
 <body>
+    <div class="dashboard-title">
+    <h1>Miami-Dade County / Microsoft Sync Dashboard</h1>
+  </div>
   <div class="dashboard-container">
-
     <!-- M365 G5 Migration Section -->
     <div class="dashboard-section m365-section">
       <h2>M365 G5 Migration</h2>
