Added footer to report5.html

--- a/report5.html
+++ b/report5.html
@@ -44,6 +44,16 @@
       text-align: center;
     }
 
+       /* Footer Styles */
+    .dashboard-footer {
+      text-align: center;
+      margin-top: 20px;
+      padding-top: 10px;
+      border-top: 1px solid #ccc;
+      color: #888;
+      font-size: 12px;
+    }
+
     .m365-section {
       background-color: #d1e5f0; /* Light blue pastel */
       color: #003f5c;
@@ -114,6 +124,11 @@
       <button class="dashboard-button">Stay Updated</button>
     </div>
 
+  </div>
+  
+    <!-- Footer -->
+  <div class="dashboard-footer">
+    <p>&copy; 2023 Miami-Dade County / Microsoft. All rights reserved.</p>
   </div>
 </body>
 </html>
