added links to report5.html

--- a/report5.html
+++ b/report5.html
@@ -96,18 +96,19 @@
     <h1>Miami-Dade County / Microsoft Sync Dashboard</h1>
   </div>
   <div class="dashboard-container">
+    
     <!-- M365 G5 Migration Section -->
     <div class="dashboard-section m365-section">
       <h2>M365 G5 Migration</h2>
       <p>This section contains information about the M365 G5 migration process.</p>
-      <button class="dashboard-button">Learn More</button>
+     <a href="m365.html"><button class="dashboard-button">Learn More</button></a>
     </div>
 
     <!-- Unified Progress Section -->
     <div class="dashboard-section progress-section">
       <h2>Unified Progress</h2>
       <p>Track the unified progress of your projects and tasks.</p>
-      <button class="dashboard-button">View Progress</button>
+     <a href="unified.html"><button class="dashboard-button">View Progress</button></a>
     </div>
 
     <!-- Roadmap Section -->
@@ -115,13 +116,14 @@
       <h2>Roadmap</h2>
       <p>Discover the exciting roadmap ahead for your organization.</p>
       <button class="dashboard-button">Explore Roadmap</button>
+     <a href="roadmap.html"><button class="dashboard-button">Explore Roadmap</button></a>
     </div>
 
     <!-- Coming Soon Section -->
     <div class="dashboard-section coming-soon-section">
       <h2>Coming Soon</h2>
       <p>Stay tuned for upcoming features and announcements.</p>
-      <button class="dashboard-button">Stay Updated</button>
+     <a href="comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
     </div>
 
   </div>
