--- a/report5.html
+++ b/report5.html
@@ -18,7 +18,7 @@
     }
 
     .dashboard-title h1 {
-      font-size: 24px;
+      font-size: 36px;
       font-weight: bold;
       padding-bottom: 10px;
     }
@@ -115,7 +115,6 @@
     <div class="dashboard-section roadmap-section">
       <h2>Roadmap</h2>
       <p>Discover the exciting roadmap ahead for your organization.</p>
-      <button class="dashboard-button">Explore Roadmap</button>
      <a href="roadmap.html"><button class="dashboard-button">Explore Roadmap</button></a>
     </div>
 
@@ -130,7 +129,7 @@
   
     <!-- Footer -->
   <div class="dashboard-footer">
-    <p>&copy; 2023 Miami-Dade County / Microsoft. All rights reserved.</p>
+    <p>&copy; 2023 Microsoft. All rights reserved.</p>
   </div>
 </body>
 </html>
