--- a/report5.html
+++ b/report5.html
@@ -3,93 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles2.css">
   <title>Miami-Dade County / Microsoft Dashboard</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-    }
-
-      .dashboard-title {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .dashboard-title h1 {
-      font-size: 36px;
-      font-weight: bold;
-      padding-bottom: 10px;
-    }
-
-    .dashboard-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
-    }
-
-    .dashboard-section {
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      min-height: 200px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-       /* Footer Styles */
-    .dashboard-footer {
-      text-align: center;
-      margin-top: 20px;
-      padding-top: 10px;
-      border-top: 1px solid #ccc;
-      color: #888;
-      font-size: 12px;
-    }
-
-    .m365-section {
-      background-color: #d1e5f0; /* Light blue pastel */
-      color: #003f5c;
-    }
-
-    .progress-section {
-      background-color: #d5ecd2; /* Light green pastel */
-      color: #005a32;
-    }
-
-    .roadmap-section {
-      background-color: #ffdfc3; /* Light orange pastel */
-      color: #b36b00;
-    }
-
-    .coming-soon-section {
-      background-color: #eaeaea; /* Light gray pastel */
-      color: #4d4d4d;
-    }
-
-    /* Example style for a modern button */
-    .dashboard-button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #0078d4;
-      color: #ffffff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .dashboard-button:hover {
-      background-color: #005ea3;
-    }
-  </style>
 </head>
 <body>
     <div class="dashboard-title">
