--- a/unified.html
+++ b/unified.html
@@ -3,41 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles2.css">
   <title>Miami-Dade County Unified Monthly Dashboard</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .progress-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .progress-title {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .progress-title h1 {
-      font-size: 24px;
-      font-weight: bold;
-      color: #0078d4;
-    }
-
-    .progress-content {
-      background-color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-    }
-
-    /* Add any additional CSS styles for the progress content here */
-
-  </style>
 </head>
 <body>
   <div class="progress-container">
@@ -51,5 +18,9 @@
             <iframe title="Miami-Dade County Unified Monthly Dashboard" width="95%" height="1000" src="https://msit.powerbi.com/reportEmbed?reportId=c607207e-fdef-422f-b959-c428c4a40ec6&autoAuth=true&ctid=72f988bf-86f1-41af-91ab-2d7cd011db47" frameborder="0" allowFullScreen="true"></iframe>
     </div>
   </div>
+      <!-- Footer -->
+      <div class="dashboard-footer">
+        <p>&copy; 2023 Microsoft. All rights reserved.</p>
+      </div>
 </body>
 </html>
