--- a/m365.html
+++ b/m365.html
@@ -3,41 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles2.css">
   <title>M365 G5 Migration</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .migration-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .migration-title {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .migration-title h1 {
-      font-size: 24px;
-      font-weight: bold;
-      color: #0078d4;
-    }
-
-    .migration-content {
-      background-color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-    }
-
-    /* Add any additional CSS styles for the migration content here */
-
-  </style>
 </head>
 <body>
   <div class="migration-container">
@@ -53,5 +20,9 @@
       <p>You can add more sections, images, charts, etc., to provide details about the migration process.</p>
     </div>
   </div>
+      <!-- Footer -->
+      <div class="dashboard-footer">
+        <p>&copy; 2023 Microsoft. All rights reserved.</p>
+      </div>
 </body>
 </html>
