updated width on unified reportpage

--- a/unified.html
+++ b/unified.html
@@ -7,7 +7,7 @@
   <title>Miami-Dade County Unified Monthly Dashboard</title>
 </head>
 <body>
-  <div class="progress-container">
+  <div class="unified-container">
     <!-- Progress Title -->
     <div class="progress-title">
       <h1>Miami-Dade County Unified Monthly Dashboard</h1>
