added home buttons

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -20,6 +20,11 @@
       <p>You can add more sections, images, countdown timers, etc., to create anticipation for the upcoming features and announcements.</p>
     </div>
   </div>
+      <!-- Home Button -->
+      <div class="dashboard-section m365-section">
+       <a href="report5.html"><button class="dashboard-button">Home</button></a>
+      </div>
+  
       <!-- Footer -->
       <div class="dashboard-footer">
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
