--- a/m365.html
+++ b/m365.html
@@ -20,6 +20,11 @@
       <p>You can add more sections, images, charts, etc., to provide details about the migration process.</p>
     </div>
   </div>
+        <!-- Home Button -->
+        <div class="dashboard-section m365-section">
+          <a href="report5.html"><button class="dashboard-button">Home</button></a>
+         </div>
+         
       <!-- Footer -->
       <div class="dashboard-footer">
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
