--- a/comingsoon.html
+++ b/comingsoon.html
@@ -21,7 +21,7 @@
     </div>
   </div>
       <!-- Home Button -->
-      <div class="dashboard-section m365-section">
+      <div>
        <a href="report5.html"><button class="dashboard-button">Home</button></a>
       </div>
   
