--- a/m365.html
+++ b/m365.html
@@ -21,10 +21,10 @@
     </div>
   </div>
         <!-- Home Button -->
-        <div class="dashboard-section m365-section">
+        <div>
           <a href="report5.html"><button class="dashboard-button">Home</button></a>
          </div>
-         
+
       <!-- Footer -->
       <div class="dashboard-footer">
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
