added MSN newsfeed to comingsoon.html

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles2.css">
-  <title>Coming Soon</title>
+  <title>Latest News from Microsoft</title>
 </head>
 <body>
   <div class="coming-soon-container">
     <!-- Coming Soon Title -->
     <div class="coming-soon-title">
-      <h1>Coming Soon</h1>
+      <h1>Latest News from Microsoft</h1>
     </div>
 
     <!-- Coming Soon Content -->
     <div class="coming-soon-content">
-      <!-- Replace the placeholder with your actual "Coming Soon" content -->
-      <p>Placeholder for the "Coming Soon" information goes here.</p>
-      <p>You can add more sections, images, countdown timers, etc., to create anticipation for the upcoming features and announcements.</p>
+      <div class="newsfeed-container">
+        <!-- Embedded MSN newsfeed using iframe -->
+        <iframe class="newsfeed-iframe" src="https://www.msn.com/en-us/news" title="Microsoft Newsfeed"></iframe>
+      </div>
     </div>
   </div>
       <!-- Home Button -->
