--- a/comingsoon.html
+++ b/comingsoon.html
@@ -14,7 +14,7 @@
     </div>
     <div class="rss-container">
     <!-- RSS Feed Content -->
-    <div id="rss-feed"></div>
+    <div id="data-container"></div>
   </div>
     
   </div>
@@ -28,33 +28,40 @@
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
       </div>
     <script>
-    // Fetch the RSS feed data using JavaScript
-    fetch('https://feeds.msn.com')
-      .then(response => response.text())
+    // Fetch data from the API
+    fetch('https://api.rss2json.com/v1/api.json?rss_url=https%3A%2F%2Fnews.microsoft.com%2Ffeed%2F')
+      .then(response => response.json())
       .then(data => {
-        const parser = new DOMParser();
-        const xml = parser.parseFromString(data, 'application/xml');
+        const itemsArray = data.items; // Extract the "Items" field from the JSON object
 
-        const rssFeedDiv = document.getElementById('rss-feed');
+        // Check if itemsArray is defined and an array
+        if (itemsArray && Array.isArray(itemsArray)) {
+          // Create elements to display the data
+          const dataContainer = document.getElementById('data-container');
+          itemsArray.forEach(item => {
+            const title = item.title;
+            const date = item.pubDate;
+            const description = item.content;
 
-        const items = xml.querySelectorAll('item');
-        items.forEach(item => {
-          const title = item.querySelector('title').textContent;
-          const description = item.querySelector('description').textContent;
-          const link = item.querySelector('link').textContent;
+            const itemDiv = document.createElement('div');
+            itemDiv.innerHTML = `
+              <h2>${title}</h2>
+              <p>Date: ${date}</p>
+              <p>${description}</p>
+              <hr>
+            `;
 
-          const rssItemDiv = document.createElement('div');
-          rssItemDiv.className = 'rss-item';
-          rssItemDiv.innerHTML = `
-            <h2 class="rss-item-title">${title}</h2>
-            <p class="rss-item-description">${description}</p>
-            <a class="rss-item-link" href="${link}" target="_blank">Read more</a>
-          `;
-
-          rssFeedDiv.appendChild(rssItemDiv);
-        });
+            dataContainer.appendChild(itemDiv);
+          });
+        } else {
+          // Handle the case when "Items" field is missing or not an array
+          const errorMessage = document.createElement('p');
+          errorMessage.textContent = 'Error: Unable to fetch data from the API.';
+          const dataContainer = document.getElementById('data-container');
+          dataContainer.appendChild(errorMessage);
+        }
       })
-      .catch(error => console.error('Error fetching RSS feed:', error));
+      .catch(error => console.error('Error fetching data:', error));
   </script>
 </body>
 </html>
