--- a/comingsoon.html
+++ b/comingsoon.html
@@ -12,7 +12,7 @@
     <div class="coming-soon-title">
       <h1>Latest News from Microsoft</h1>
     </div>
-    <div class="rss-container">
+    <div class="migration-content">
     <!-- RSS Feed Content -->
     <div id="data-container"></div>
   </div>
