--- a/roadmap.html
+++ b/roadmap.html
@@ -7,6 +7,7 @@
   <title>Miami-Dade County Roadmap Section</title>
 </head>
 <body>
+  <div class="roadmap-container">
     <!-- Roadmap Title -->
     <div class="roadmap-title">
       <h1>Miami-Dade County Roadmap Section</h1>
@@ -88,6 +89,7 @@
       <!-- Footer -->
       <div class="dashboard-footer">
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
+      </div>
       </div>
 </body>
 </html>
