--- a/report5.html
+++ b/report5.html
@@ -9,6 +9,10 @@
 <body>
     <div class="dashboard-title">
     <h1>Miami-Dade County / Microsoft Sync Dashboard</h1>
+    <div>
+      <img src="Miami-Dade-County-logo.jpg" width="200px" style="margin-right: 20px;">
+      <img src="msft-logo.jpg" width="200px">
+    </div>
   </div>
   <div class="dashboard-container">
     
