--- a/report5.html
+++ b/report5.html
@@ -44,9 +44,8 @@
   
     <!-- Footer -->
   <div class="dashboard-footer">
-    <img src="msft-logo.jpg" width="200px">
+    <img src="msft-logo.jpg" width="200px">  <img src="Miami-Dade-County-logo.jpg" width="150px">
     <p>&copy; 2023 Microsoft. All rights reserved.</p>
-    <img src="Miami-Dade-County-logo.jpg" width="100px">
   </div>
 </body>
 </html>
