--- a/m365.html
+++ b/m365.html
@@ -29,6 +29,7 @@
 
       <!-- Footer -->
       <div class="dashboard-footer">
+        <img src="Miami-Dade-County-logo.jpg" width="150px"> <img src="msft-logo.jpg" width="200px"> 
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
       </div>
 </body>
