--- a/comingsoon.html
+++ b/comingsoon.html
@@ -13,7 +13,7 @@
       <h1>Latest News from Microsoft</h1>
     </div>
     <div class="migration-content">
-    <!-- RSS Feed Content -->
+    <!-- RSS Feed Content from https://news.microsoft.com/feed/ -->
     <div id="data-container"></div>
   </div>
     
