--- a/roadmap.html
+++ b/roadmap.html
@@ -80,7 +80,37 @@
         </div>
       </div>   
     </div>
+    <!--legend-->
+    <br><br>
+    <h2>Legend</h2>
+    <ul class="horizontal-list">
+      <li>    
+      <div class="checklist-item">
+        <div class="status-circle status-completed">✓</div>
+        <div class="goal-text">Completed</div>
+      </div>
+    </li>
+      <li>
+        <div class="checklist-item">
+        <div class="status-circle status-in-progress">○</div>
+        <div class="goal-text">In Progress</div>
+      </div>
+    </li>
+      <li>
+        <div class="checklist-item">
+        <div class="status-circle status-not-started">○</div>
+        <div class="goal-text">Not Started</div>
+      </div>
+    </li>
+      <li>
+        <div class="checklist-item">
+        <div class="status-circle status-cancelled">✗</div>
+        <div class="goal-text">Cancelled</div>
+      </div>
+    </li>
+    </ul>
   </div>
+
   <!-- Home Button -->
   <div class="home-button-section">
    <a href="report5.html"><button class="dashboard-button">Home</button></a>
