--- a/roadmap.html
+++ b/roadmap.html
@@ -18,7 +18,15 @@
       <div class="checklist-container">
         <div class="checklist-item">
           <div class="status-circle status-completed">✓</div>
-          <div class="goal-text">Azure Active Directory (AAD) Premium</div>
+          <div class="goal-text">Exchange Online</div>
+        </div>
+        <div class="checklist-item">
+          <div class="status-circle status-completed">✓</div>
+          <div class="goal-text">Azure Active Directory (AAD) and AAD Premium</div>
+        </div>
+        <div class="checklist-item">
+          <div class="status-circle status-completed">✓</div>
+          <div class="goal-text">Azure Multi Factor Authentication Enabled (MFA)</div>
         </div>
           <div class="checklist-item">
           <div class="status-circle status-in-progress">✓</div>
@@ -81,34 +89,36 @@
       </div>   
 
          <!--legend-->
-    <br><br>
-    <h2>Legend</h2>
-    <ul class="horizontal-list">
-      <li>    
-      <div class="checklist-item">
-        <div class="status-circle status-completed">✓</div>
-        <div class="goal-text">Completed</div>
-      </div>
-    </li>
-      <li>
-        <div class="checklist-item">
-        <div class="status-circle status-in-progress">○</div>
-        <div class="goal-text">In Progress</div>
-      </div>
-    </li>
-      <li>
-        <div class="checklist-item">
-        <div class="status-circle status-not-started">○</div>
-        <div class="goal-text">Not Started</div>
-      </div>
-    </li>
-      <li>
-        <div class="checklist-item">
-        <div class="status-circle status-cancelled">✗</div>
-        <div class="goal-text">Cancelled</div>
-      </div>
-    </li>
-    </ul>
+         <div class="migration-content">
+          <h2>Roadmap Legend</h2>
+          <ul class="horizontal-list">
+            <li>    
+            <div class="checklist-item">
+              <div class="status-circle status-completed">✓</div>
+              <div class="goal-text">Completed</div>
+            </div>
+          </li>
+            <li>
+              <div class="checklist-item">
+              <div class="status-circle status-in-progress">✓</div>
+              <div class="goal-text">In Progress</div>
+            </div>
+          </li>
+            <li>
+              <div class="checklist-item">
+              <div class="status-circle status-not-started">○</div>
+              <div class="goal-text">Not Started</div>
+            </div>
+          </li>
+            <li>
+              <div class="checklist-item">
+              <div class="status-circle status-cancelled">✗</div>
+              <div class="goal-text">Cancelled</div>
+            </div>
+          </li>
+          </ul>
+         </div>
+
   </div>
   
     </div>
@@ -121,7 +131,7 @@
 
       <!-- Footer -->
       <div class="dashboard-footer">
-        <img src="Miami-Dade-County-logo.jpg" width="150px"> <img src="msft-logo.jpg" width="200px"> 
+        <img src="mdc-logo.png" width="150px"> <img src="microsoft-logo.png" width="200px"> 
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
       </div>
  
