--- a/report5.html
+++ b/report5.html
@@ -44,7 +44,7 @@
   
     <!-- Footer -->
   <div class="dashboard-footer">
-    <img src="Miami-Dade-County-logo.jpg" width="150px"> <img src="msft-logo.jpg" width="200px"> 
+    <img src="mdc-logo.png" width="150px"> <img src="microsoft-logo.png" width="200px"> 
     <p>&copy; 2023 Microsoft. All rights reserved.</p>
   </div>
 </body>
