--- a/unified.html
+++ b/unified.html
@@ -32,7 +32,7 @@
 
       <!-- Footer -->
       <div class="dashboard-footer">
-        <img src="mdc-logo.png" width="150px"> <img src="microsoft-logo.png" width="200px"> 
+        <img src="microsoft-logo.png" width="200px"> 
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
       </div>
 </body>
