added more sections

--- a/roadmap.html
+++ b/roadmap.html
@@ -89,7 +89,7 @@
       </div>   
 
          <!--legend-->
-         <div class="migration-content">
+         <div class="roadmap-legend-content">
           <h2>Roadmap Legend</h2>
           <ul class="horizontal-list">
             <li>    
