--- a/report5.html
+++ b/report5.html
@@ -40,6 +40,21 @@
      <a href="comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
     </div>
 
+    <!--Sections 5 & 6 if needed-->
+        <!-- Roadmap Section -->
+        <div class="dashboard-section roadmap-section">
+          <h2>Roadmap</h2>
+          <p>Discover the exciting roadmap ahead for your organization.</p>
+         <a href="roadmap.html"><button class="dashboard-button">Explore Roadmap</button></a>
+        </div>
+    
+        <!-- Coming Soon Section -->
+        <div class="dashboard-section coming-soon-section">
+          <h2>Coming Soon</h2>
+          <p>Stay tuned for upcoming features and announcements.</p>
+         <a href="comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
+        </div>
+
   </div>
   
     <!-- Footer -->
