title name change

--- a/report5.html
+++ b/report5.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles2.css">
-  <title>Miami-Dade County / Microsoft Dashboard</title>
+  <title>Miami-Dade County and Microsoft</title>
 </head>
 <body>
     <div class="dashboard-title">
-    <h1>Miami-Dade County / Microsoft Sync Dashboard</h1>
+    <h1>Miami-Dade County and Microsoft Executive Dashboard</h1>
   </div>
   <div class="dashboard-container">
     
