updated roadmap on Sentinel

--- a/roadmap.html
+++ b/roadmap.html
@@ -42,7 +42,10 @@
           <div class="status-circle status-in-progress">✓</div>
           <div class="goal-text">Microsoft Defender for Office 365</div>
         </div>
-      
+        <div class="checklist-item">
+          <div class="status-circle status-in-progress">✓</div>
+          <div class="goal-text">Azure Sentinel</div>
+        </div>
             <div class="checklist-item">
           <div class="status-circle status-in-progress">✓</div>
           <div class="goal-text">Azure ARC</div>
@@ -50,10 +53,6 @@
               <div class="checklist-item">
           <div class="status-circle status-in-progress">✓</div>
           <div class="goal-text">Power Platform (Power Apps, Power Automate, Power BI)</div>
-        </div>
-        <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">Azure Sentinel</div>
         </div>
         <div class="checklist-item">
           <div class="status-circle status-not-started">○</div>
