--- a/miamizoo.html
+++ b/miamizoo.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Sample PVA - Miami Zoo Demo Site</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap" rel="stylesheet">
-        <meta name="description" content="Welcome to the sample Power Virtual Agent - Miami Zoo site. Developed by Microsoft for demostration only."/>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/styles.css">
-        <script src="js/scripts.js" defer></script>
-    </head>
-	<body>
-	  <div class="migration-container">
-		<!-- Title -->
-		<div class="migration-title">
-		  <h1>Miami Zoo & Microsoft PVA Demo Site</h1>
-		</div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles2.css">
+  <title>Miami Zoo & Microsoft PVA Demo Site</title>
+</head>
+<body>
+  <div class="migration-container">
+    <!-- Migration Title -->
+    <div class="migration-title">
+      <h1>Miami Zoo & Microsoft PVA Demo Site/h1>
+    </div>
 
-		<!-- Content -->
-		<div class="migration-content">
-		  <iframe src="https://web.powerva.microsoft.com/environments/Default-e05c6635-e6ae-4253-8938-1abc94c2c449/bots/cr8f5_miamiZoo/webchat?__version__=2" frameborder="0" style="width: 75%; height: 500px;"></iframe>
+    <!-- Migration Content -->
+    <div class="migration-content">
+      <!-- Replace the placeholder with your actual migration content -->
+      <p>Placeholder for the M365 G5 migration information goes here.</p>
+      <p>asgl glkgjlkjfg dlkfdlk dlklfdk dlkmflkdn ldknljfndl ldknldkn ldknj dljndljnf dljkfndljnfd dljncldjn
+        djlncdlj dljcndjl dljcndljnc cldjncdljnc cljdncljn ljcndljcnd ljdncljdnc cldkncldjnc lcjdncljnd clndcljdnc
+        cdkjcbdchkb cldjkcldjbc cldjncljdnc cldjkncldknc clvdjnvljdnv vlfknvlfnvljf lvfkljvnf ljfvnfljvn lfkvnflnj</p>
+    </div>
+  </div>
+        <!-- Home Button -->
+        <div class="home-button-section">
+          <a href="report5.html"><button class="dashboard-button">Home</button></a>
+         </div>
 
-		</div>
-	  </div>
-		  <!-- Footer -->
-		  <div class="dashboard-footer">
-			<img src="microsoft-logo.png" width="200px"> 
-			<p>&copy; 2023 Microsoft. All rights reserved.</p>
-		  </div>
-	</body>
+      <!-- Footer -->
+      <div class="dashboard-footer">
+        <img src="microsoft-logo.png" width="200px"> 
+        <p>&copy; 2023 Microsoft. All rights reserved.</p>
+      </div>
+</body>
 </html>
