--- a/miamizoo.html
+++ b/miamizoo.html
@@ -21,7 +21,7 @@
       <br>
       
       <div>
-        <iframe src="https://web.powerva.microsoft.com/environments/Default-e05c6635-e6ae-4253-8938-1abc94c2c449/bots/cr8f5_miamiZoo/webchat?__version__=2" frameborder="0" style="width: 100%; height: 100%;"></iframe>
+        <iframe src="https://web.powerva.microsoft.com/environments/Default-e05c6635-e6ae-4253-8938-1abc94c2c449/bots/cr8f5_miamiZoo/webchat?__version__=2" frameborder="0" style="width: 75%; height: 500px;"></iframe>
       </div>
     </div>
   </div>
