--- a/m365.html
+++ b/m365.html
@@ -15,11 +15,7 @@
 
     <!-- Migration Content -->
     <div class="migration-content">
-      <!-- Replace the placeholder with your actual migration content -->
-      <p>Placeholder for the M365 G5 migration information goes here.</p>
-      <p>asgl glkgjlkjfg dlkfdlk dlklfdk dlkmflkdn ldknljfndl ldknldkn ldknj dljndljnf dljkfndljnfd dljncldjn
-        djlncdlj dljcndjl dljcndljnc cldjncdljnc cljdncljn ljcndljcnd ljdncljdnc cldkncldjnc lcjdncljnd clndcljdnc
-        cdkjcbdchkb cldjkcldjbc cldjncljdnc cldjkncldknc clvdjnvljdnv vlfknvlfnvljf lvfkljvnf ljfvnfljvn lfkvnflnj</p>
+      <img src="G5-migration.png" width="90%">
     </div>
   </div>
         <!-- Home Button -->
