change title for section Latest news

--- a/report5.html
+++ b/report5.html
@@ -35,7 +35,7 @@
 
     <!-- Coming Soon Section -->
     <div class="dashboard-section coming-soon-section">
-      <h2>Coming Soon</h2>
+      <h2>Latest News</h2>
       <p>Stay tuned for upcoming features and announcements.</p>
      <a href="comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
     </div>
