new version ofUpdate roadmap.html

--- a/roadmap.html
+++ b/roadmap.html
@@ -7,130 +7,27 @@
   <title>Miami-Dade County Roadmap Section</title>
 </head>
 <body>
-  <div class="roadmap-container">
-    <!-- Roadmap Title -->
-    <div class="roadmap-title">
-      <h1>Miami-Dade County Roadmap Section</h1>
+  <div class="migration-container">
+    <!-- Migration Title -->
+    <div class="migration-title">
+      <h1>Miami-Dade County Roadmap</h1>
     </div>
 
+    <!-- Migration Content -->
     <div class="migration-content">
-
-      <div class="checklist-container">
-        <div class="checklist-item">
-          <div class="status-circle status-completed">✓</div>
-          <div class="goal-text">Exchange Online</div>
-        </div>
-        <div class="checklist-item">
-          <div class="status-circle status-completed">✓</div>
-          <div class="goal-text">Azure Active Directory (AAD)</div>
-        </div>
-        <div class="checklist-item">
-          <div class="status-circle status-completed">✓</div>
-          <div class="goal-text">Azure Active Directory Multi Factor Authentication (MFA)</div>
-        </div>
-          <div class="checklist-item">
-          <div class="status-circle status-in-progress">✓</div>
-          <div class="goal-text">Microsoft Dynamics Fraud Protection</div>
+      <img src="mdc-roadmap.png" width="100%">
     </div>
-    
-        <div class="checklist-item">
-          <div class="status-circle status-in-progress">✓</div>
-          <div class="goal-text">Microsoft Intune</div>
-        </div>
-      
-          <div class="checklist-item">
-          <div class="status-circle status-in-progress">✓</div>
-          <div class="goal-text">Microsoft Defender for Office 365</div>
-        </div>
-        <div class="checklist-item">
-          <div class="status-circle status-in-progress">✓</div>
-          <div class="goal-text">Azure Sentinel</div>
-        </div>
-            <div class="checklist-item">
-          <div class="status-circle status-in-progress">✓</div>
-          <div class="goal-text">Azure ARC</div>
-        </div>
-              <div class="checklist-item">
-          <div class="status-circle status-in-progress">✓</div>
-          <div class="goal-text">Power Platform (Power Apps, Power Automate, Power BI)</div>
-        </div>
-        <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">Microsoft Defender for Endpoint</div>
-        </div>
-        <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">Microsoft Defender for SQL</div>
-        </div>
-
-          <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">Microsoft Defender for Identity</div>
-        </div>
-          <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">Microsoft Cloud App Security</div>
-        </div>
-            <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">Microsoft Information Protection</div>
-        </div>
-            <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">SharePoint Online and Viva</div>
-        </div>
-            <div class="checklist-item">
-          <div class="status-circle status-not-started">○</div>
-          <div class="goal-text">Teams Telephony</div>
-        </div>
-      </div>   
-
-         <!--legend-->
-         <div class="roadmap-legend-content">
-          <h2>Roadmap Legend</h2>
-          <ul class="horizontal-list">
-            <li>    
-            <div class="checklist-item">
-              <div class="status-circle status-completed">✓</div>
-              <div class="goal-text">Completed</div>
-            </div>
-          </li>
-            <li>
-              <div class="checklist-item">
-              <div class="status-circle status-in-progress">✓</div>
-              <div class="goal-text">In Progress</div>
-            </div>
-          </li>
-            <li>
-              <div class="checklist-item">
-              <div class="status-circle status-not-started">○</div>
-              <div class="goal-text">Not Started</div>
-            </div>
-          </li>
-            <li>
-              <div class="checklist-item">
-              <div class="status-circle status-cancelled">✗</div>
-              <div class="goal-text">Cancelled</div>
-            </div>
-          </li>
-          </ul>
+  </div>
+        <!-- Home Button -->
+        <div class="home-button-section">
+          <a href="report5.html"><button class="dashboard-button">Home</button></a>
          </div>
-
-  </div>
-  
-    </div>
- 
-
-  <!-- Home Button -->
-  <div class="home-button-section">
-   <a href="report5.html"><button class="dashboard-button">Home</button></a>
-  </div>
 
       <!-- Footer -->
       <div class="dashboard-footer">
         <img src="microsoft-logo.png" width="200px"> 
         <p>&copy; 2023 Microsoft. All rights reserved.</p>
       </div>
- 
 </body>
 </html>
+
