--- a/jea-home.html
+++ b/jea-home.html
@@ -37,7 +37,7 @@
     <div class="dashboard-section coming-soon-section">
       <h2>Latest News</h2>
       <p>Stay tuned for upcoming features and announcements.</p>
-     <a href="comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
+     <a href="jea-comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
     </div>
 
     <!--Sections 5 & 6 if needed
