--- a/jea-comingsoon.html
+++ b/jea-comingsoon.html
@@ -20,7 +20,7 @@
   </div>
       <!-- Home Button -->
       <div class="home-button-section">
-       <a href="report5.html"><button class="dashboard-button">Home</button></a>
+       <a href="jea-home.html"><button class="dashboard-button">Home</button></a>
       </div>
   
       <!-- Footer -->
