--- a/jea-m365.html
+++ b/jea-m365.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles2.css">
-  <title>M365 G5 Migration</title>
+  <title>JEA M365 G5 Migration</title>
 </head>
 <body>
   <div class="migration-container">
     <!-- Migration Title -->
     <div class="migration-title">
-      <h1>M365 G5 Migration</h1>
+      <h1>JEA M365 G5 Migration</h1>
     </div>
 
     <!-- Migration Content -->
     <div class="migration-content">
-      <img src="G5-migration.png" width="100%">
+      <img src="mdc-roadmap.png" width="100%">
     </div>
   </div>
         <!-- Home Button -->
