--- a/jea-home.html
+++ b/jea-home.html
@@ -21,18 +21,18 @@
 
     <!-- Unified Progress Section -->
     <div class="dashboard-section progress-section">
-      <h2>Unified Progress</h2>
-      <p>Track the unified progress of your projects and tasks.</p>
-     <a href="jea-unified.html"><button class="dashboard-button">View Progress</button></a>
-    </div>
-
-    <!-- Roadmap Section 
-    <div class="dashboard-section roadmap-section">
       <h2>Roadmap</h2>
       <p>Discover the exciting roadmap ahead for your organization.</p>
      <a href="roadmap.html"><button class="dashboard-button">Explore Roadmap</button></a>
     </div>
--->
+
+    <!-- Roadmap Section -->
+    <div class="dashboard-section roadmap-section">
+      <h2> </h2>
+      <p>...</p>
+     <a href=""><button class="dashboard-button">Click</button></a>
+    </div>
+
     <!-- Coming Soon Section -->
     <div class="dashboard-section coming-soon-section">
       <h2>Latest News</h2>
