--- a/jea-home.html
+++ b/jea-home.html
@@ -28,16 +28,16 @@
 
     <!-- Roadmap Section -->
     <div class="dashboard-section roadmap-section">
-      <h2> </h2>
-      <p>...</p>
-     <a href=""><button class="dashboard-button">Click</button></a>
+      <h2>Latest News</h2>
+      <p>Stay tuned for upcoming features and announcements.</p>
+     <a href="jea-comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
     </div>
 
     <!-- Coming Soon Section -->
     <div class="dashboard-section coming-soon-section">
-      <h2>Latest News</h2>
-      <p>Stay tuned for upcoming features and announcements.</p>
-     <a href="jea-comingsoon.html"><button class="dashboard-button">Stay Updated</button></a>
+      <h2> </h2>
+      <p></p>
+     <a href=""><button class="dashboard-button">   </button></a>
     </div>
 
     <!--Sections 5 & 6 if needed
