--- a/jea-home.html
+++ b/jea-home.html
@@ -35,9 +35,9 @@
 
     <!-- Coming Soon Section -->
     <div class="dashboard-section coming-soon-section">
-      <h2> </h2>
-      <p></p>
-     <a href=""><button class="dashboard-button">   </button></a>
+      <!--<h2>Header</h2>
+      <p>details abuot the section</p>
+     <a href=""><button class="dashboard-button">Click Me</button></a>-->
     </div>
 
     <!--Sections 5 & 6 if needed
