--- a/jea-home.html
+++ b/jea-home.html
@@ -23,7 +23,7 @@
     <div class="dashboard-section progress-section">
       <h2>Roadmap</h2>
       <p>Discover the exciting roadmap ahead for your organization.</p>
-     <a href="roadmap.html"><button class="dashboard-button">Explore Roadmap</button></a>
+     <a href="jea-m365.html"><button class="dashboard-button">Explore Roadmap</button></a>
     </div>
 
     <!-- Roadmap Section -->
