--- a/jea-home.html
+++ b/jea-home.html
@@ -21,9 +21,9 @@
 
     <!-- Unified Progress Section -->
     <div class="dashboard-section progress-section">
-      <h2>Roadmap</h2>
-      <p>Discover the exciting roadmap ahead for your organization.</p>
-     <a href="jea-m365.html"><button class="dashboard-button">Explore Roadmap</button></a>
+      <h2>Unified Progress</h2>
+      <p>Track the unified progress of your projects and tasks.</p>
+     <a href="jea-unified.html"><button class="dashboard-button">View Progress</button></a>
     </div>
 
     <!-- Roadmap Section -->
